# turtlewowsim

./: .pre-commit-config.yaml  pyproject.toml
examples/: arcane_racial_test.py  arcane_ring_test.py  arcane_trinket_test.py  arcane_trinket_test2.py  arcane_weights_test.py  bis_mage_test.py  boomkin_trinket_test.py  boomkin_weights_test.py  cooldowns.py  fire_trinket_test.py  fire_weights_test.py  frost_trinket_test.py  frost_weights_test.py  loatheb.py  lock_weights_test.py  locks_and_mages.py  mptest.py  multi_arcane_and_fire_mage_test.py  multi_arcane_mage_test.py  multi_arcane_mage_test2.py  multi_arcane_mage_test3.py  multi_boomkin_test.py  multi_fire_mage_test.py  multi_fire_mage_test2.py  multi_frost_mage_test.py  multi_frost_mage_test2.py  multi_mage_test.py  num_lock_test.py  simulation.py  single_iteration_arcane_mage.py  single_iteration_arcane_mage_aoe.py  single_iteration_boomkin.py  single_iteration_frost_mage.py  single_iteration_lock.py  single_iteration_mage.py  t2test.py
sim/: __init__.py  arcane_dots.py  character.py  cooldown_usages.py  cooldowns.py  debuffs.py  dot.py  druid.py  druid_rotation_cooldowns.py  druid_talents.py  env.py  fire_dots.py  hot_streak.py  ignite.py  improved_shadow_bolt.py  item_proc_handler.py  item_procs.py  mage.py  mage_rotation_cooldowns.py  nature_dots.py  shadow_dots.py  simulation.py  simulation_multi.py  spell.py  spell_school.py  utils.py  warlock.py
sim/character/: __init__.py  character.py  cooldowns.py
sim/cooldown/: __init__.py  base.py  items.py  racials.py
sim/debuffs/: __init__.py  debuffs.py  ignite.py  improved_shadow_bolt.py
sim/dots/: __init__.py  arcane.py  dot.py  fire.py  nature.py  shadow.py
sim/druid/: __init__.py  cooldowns.py  druid.py  options.py
sim/mage/: __init__.py  cooldowns.py  mage.py  options.py  talents.py
sim/warlock/: __init__.py  cooldowns.py  options.py  talents.py  warlock.py
src/turtlewowsim/: arcane_dots.py  character.py  cooldown_usages.py  cooldowns.py  debuffs.py  decorators.py  dot.py  druid.py  druid_options.py  env.py  equipped_items.py  fire_dots.py  hot_streak.py  ignite.py  improved_shadow_bolt.py  item_proc_handler.py  item_procs.py  mage.py  mage_rotation_cooldowns.py  mage_talents.py  nature_dots.py  shadow_dots.py  simulation.py  simulation_multi.py  spell.py  spell_school.py  talent_school.py  utils.py  warlock.py  warlock_talents.py
src/turtlewowsim/classes/: __init__.py
src/turtlewowsim/dots/: __init__.py  arcane.py  fire.py  nature.py  (+1 more)
(+12 files in other folders)
