[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "turtlewow_sim"
version = "1.1.0"
description = "Simulation for Turtle WoW that currently supports Arcane/Fire/Frost Mages, Boomkins, Locks."
authors = [
    { name = "mcdallas", email = "mcdallas@protonmail.com" },
    { name = "pepopo978", email = "pepopo978@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "simpy>=4.1.1,<5",
    "tqdm>=4.46.1,<5",
    "plotly>=5.24.1,<6",
    "numpy>=2.1.1,<3",
    "pandas>=2.2.2,<3",
    "dill>=0.3.8,<0.4",
    "loky>=3.5.3,<4",
]

[project.urls]
Homepage = "https://github.com/pepopo978/turtlewowsim"

[project.optional-dependencies]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.11"]

[project.scripts]
sim = "sim:main"

[tool.setuptools]
packages = ["sim", "examples"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.uv]
package = true

[tool.ruff]
line-length = 79
target-version = "py313"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
